--- a/Client/src/Components/Pages/Home.css
+++ b/Client/src/Components/Pages/Home.css
@@ -62,3 +62,36 @@ body{
         flex-wrap: wrap;
     }
 }
+.topcategories {
+    width: 90vw;
+    display: flex;
+    text-align: center; /* Center the content */
+  }
+  .topcategories h2{
+    text-align: left;
+    margin-left: 32px;
+  }
+  
+  .cardsline1,
+  .cardsline2 {
+    display: flex;
+    justify-content: center; /* Distribute items with space around them */
+    margin: 20px 0; /* Add some margin between the lines */
+  }
+  
+  .cardsline1 div,
+  .cardsline2 div {
+    flex: 1;
+    margin: 0 10px; /* Add some margin between the cards */
+  }
+  
+  .cardsline1 img,
+  .cardsline2 img {
+    max-width: 100%;
+    height: auto;
+  }
+  
+  h3 {
+    margin-top: 10px; /* Add some space between image and text */
+  }
+  
