--- a/Client/src/Components/Navbar/Navbar.css
+++ b/Client/src/Components/Navbar/Navbar.css
@@ -1,4 +1,4 @@
- /* body{
+ body{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -181,7 +181,33 @@
     color: gray;
   }
  
-
+  .mobiles-link {
+    z-index: 2000;
+    position: relative;
+  }
+  
+  .hover-box {
+    position: absolute;
+    top:70px; /* Position the box below the link */
+    left: 0;
+    background-color: white;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Optional: Add a subtle shadow */
+    padding: 10px;
+    width: 250px; /* Adjust the width as needed */
+  }
+  
+  .try-button {
+    background-color: black;
+    color: white;
+    padding: 8px 16px;
+    border: none;
+    cursor: pointer;
+    font-size: 14px;
+    border-radius: 4px;
+  }
+  
+  /* Add any other styles for activeClass and notactiveClass as needed */
+  
   @media  (max-width: 823px) {
     .btn{
       display: none;
@@ -293,9 +319,9 @@
       width: 100%;
     }
   
-      } */
+      }
 
-      body {
+      /* body {
         margin: 0;
         padding: 0;
         box-sizing: border-box;
@@ -304,6 +330,7 @@
       .logog {
         top: 10px;
         display: flex;
+        position: relative;
         align-items: center;
         justify-content: center;
         cursor: pointer;
@@ -589,7 +616,7 @@
         }
       }
       
-      @media (max-width: 415px) and (min-width: 375px) {
+      @media (max-width: 480px)  {
         .navbar {
-          width: 110%;
-        }}
+          width: 100%;
+        }} */
