--- a/Client/src/Components/Navbar/Navbar.css
+++ b/Client/src/Components/Navbar/Navbar.css
@@ -368,6 +368,7 @@
           grid-template-columns: 1fr 4fr 0.4fr 0.5fr ;
           grid-template-rows: repeat(2,auto);
           height: 48px;
+          width: 100%;
           padding: 0 12px;
           gap: 0px;
       }
